BEAM-00: Remove tab voucher & show title achievement rewards

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -619,6 +619,7 @@
     "Title": "Rewards",
     "Reward": "Rewards",
     "Mission": "Mission",
+    "AchievementRewards": "Achievement Rewards",
     "DetailVoucher": {
       "QuotaLeft": "Quota Left",
       "RedeemRewards": "Redeem Rewards",
