--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -656,6 +656,7 @@
     "Title": "獎勵",
     "Reward": "獎勵",
     "Mission": "任務",
+    "AchievementRewards": "Achievement Rewards",
     "DetailVoucher": {
       "QuotaLeft": "剩餘額度",
       "RedeemRewards": "兌換獎勵",
