--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -623,6 +623,7 @@
       "RedeemRewards": "Redeem Rewards",
       "Expired": "Expired",
       "Redeemed": "Redeemed",
+      "NeedMorePts": "Need More Pts",
       "RewardAchievement": "Reward Achievement",
       "ModalSuccess": {
         "Title": "Congrats! {{credit}} Credits have been claimed!",
