BEAM-1651: Update Modal How to get Credit

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -664,6 +664,7 @@
       "BtnGo": "Go",
       "ModalGetCredit": {
         "HowToGetCredit": "How to Get Credit",
+        "HowToGetFans": "How to Get Fans",
         "Title1": "Post Public Content",
         "Title2": "Make Exclusive Content",
         "Title3": "Perform in Beamco Event",
