--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -703,6 +703,7 @@
       "BtnGo": "前往",
       "ModalGetCredit": {
         "HowToGetCredit": "點樣賺取積分",
+        "HowToGetFans": "How to Get Fans",
         "Title1": "發佈公開內容",
         "Title2": "製作獨家內容",
         "Title3": "參與 Beamco 活動",
