--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -1708,7 +1708,8 @@
     "TooFast": "滑動太快，請重新再試！",
     "EnjoyShow": "讓我們盡情享受表演！",
     "Credit": "餘額",
-    "NowActive": "Now Active"
+    "NowActive": "Now Active",
+    "LeaderTipper": "Leaderboard Tipper"
   },
   "DiscoverArtist": {
     "Title": "Discover Artist"
