update benefit when there's no data

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -666,6 +666,9 @@
     "EmptyState": {
       "RewardTitle": "No Rewards is Available",
       "RewardSubtitle": "If there is one, it will show up here. Visit this page regularly so you can keep updated."
+    },
+    "DetailBenefit": {
+      "Available": "Available for"
     }
   },
   "Musician": {
