BEAM-1699: Fixing translate income in event detail

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -516,6 +516,7 @@
       "Title": "Event details",
       "LineUp": "LINE UP",
       "TopTiper": "TOP BEAMERS",
+      "Income": "INCOME",
       "TipDistribution": "Beam distribution",
       "MusicianTipped": "Artist beamed",
       "Perform": "Pick me!",
